--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="shortcut icon" href="./media/laptop.svg">
 
-    <title>poyoyoyoyo</title>
+    <title>cv-react</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
   </head>
   <body>
