--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <link>
+  <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
@@ -8,13 +8,13 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="shortcut icon" href="./media/laptop.svg">
 
-    <link rel="shortcut icon" href=".media/laptop.svg">
-    <title>Jado - CV</title>
+    <title>cv-react</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css">
   </head>
-  
   <body>
-
+    
     <div id="root"></div>
 
   </body>
